--- a/system/main.xaml
+++ b/system/main.xaml
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1012,726</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1012,783</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>main_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="44">
@@ -57,7 +57,7 @@
       <AssemblyReference>UiPath.Excel</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="leer el archivo generado con la informacion tabulada, una vez listo lo enviamos por variable de vuelta como argumento." DisplayName="main" sap:VirtualizedContainerService.HintSize="476,518" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="leer el archivo generado con la informacion tabulada, una vez listo lo enviamos por variable de vuelta como argumento." DisplayName="main" sap:VirtualizedContainerService.HintSize="476,618" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="tableInfo" />
       <Variable x:TypeArguments="x:String" Name="tablaText" />
@@ -93,5 +93,13 @@
     </ui:ExcelApplicationScope>
     <ui:RemoveDataRow Row="{x:Null}" DataTable="[tableInfo]" DisplayName="Remove Data Row" sap:VirtualizedContainerService.HintSize="434,22" sap2010:WorkflowViewState.IdRef="RemoveDataRow_1" RowIndex="0" />
     <ui:RemoveDataRow Row="{x:Null}" DataTable="[tableInfo]" DisplayName="Remove Data Row" sap:VirtualizedContainerService.HintSize="434,22" sap2010:WorkflowViewState.IdRef="RemoveDataRow_2" RowIndex="0" />
+    <Assign sap:VirtualizedContainerService.HintSize="434,60" sap2010:WorkflowViewState.IdRef="Assign_1">
+      <Assign.To>
+        <OutArgument x:TypeArguments="sd:DataTable">[out_dataTable]</OutArgument>
+      </Assign.To>
+      <Assign.Value>
+        <InArgument x:TypeArguments="sd:DataTable">[tableInfo]</InArgument>
+      </Assign.Value>
+    </Assign>
   </Sequence>
 </Activity>
