--- a/Main.xaml
+++ b/Main.xaml
@@ -1,6 +1,6 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1014,809" sap2010:WorkflowViewState.IdRef="main_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="1012,809" sap2010:WorkflowViewState.IdRef="main_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
-    <scg:List x:TypeArguments="x:String" Capacity="44">
+    <scg:List x:TypeArguments="x:String" Capacity="23">
       <x:String>System.Activities</x:String>
       <x:String>System.Activities.Statements</x:String>
       <x:String>System.Activities.Expressions</x:String>
@@ -27,7 +27,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="24">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="25">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -50,8 +50,9 @@
       <AssemblyReference>UiPath.CV</AssemblyReference>
       <AssemblyReference>System.ServiceModel</AssemblyReference>
       <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
       <AssemblyReference>UiPath.Database</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
+      <AssemblyReference>System.Memory</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Flowchart DisplayName="main" sap:VirtualizedContainerService.HintSize="746,644" sap2010:WorkflowViewState.IdRef="Flowchart_1">
@@ -61,6 +62,7 @@
       <Variable x:TypeArguments="x:String" Name="compra" />
       <Variable x:TypeArguments="x:String" Name="venta" />
       <Variable x:TypeArguments="sd:DataTable" Name="datosProcesados" />
+      <Variable x:TypeArguments="sd:DataTable" Name="tarjetasDetalles" />
     </Flowchart.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -80,10 +82,10 @@
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <av:Point x:Key="ShapeLocation">50,281</av:Point>
           <av:Size x:Key="ShapeSize">200,138</av:Size>
-          <av:PointCollection x:Key="ConnectorLocation">250,350 420,350</av:PointCollection>
+          <av:PointCollection x:Key="ConnectorLocation">250,350 280,350 280,150 400,150</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Ejecucion de los flujos de procesos, trasladar de Csv a fortato con la plantilla de Formulas&#xD;&#xA;" DisplayName="Llamar Main de Procesos " sap:VirtualizedContainerService.HintSize="200,138" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Procesos\Main.xaml">
+      <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Ejecucion de los flujos de procesos, trasladar de Csv a fortato con la plantilla de Formulas&#xA;" DisplayName="Llamar Main de Procesos " sap:VirtualizedContainerService.HintSize="200,138" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Procesos\Main.xaml">
         <ui:InvokeWorkflowFile.Arguments>
           <OutArgument x:TypeArguments="x:String" x:Key="out_name">
             <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="final_file_name" />
@@ -93,6 +95,9 @@
           </InArgument>
           <InArgument x:TypeArguments="x:String" x:Key="in_tipoCambio_venta">
             <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="venta" />
+          </InArgument>
+          <InArgument x:TypeArguments="sd:DataTable" x:Key="out_tarjetasDetalles">
+            <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="tarjetasDetalles" />
           </InArgument>
         </ui:InvokeWorkflowFile.Arguments>
         <sap:WorkflowViewStateService.ViewState>
@@ -106,19 +111,15 @@
         <FlowStep x:Name="__ReferenceID1">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
-              <av:Point x:Key="ShapeLocation">420,324.5</av:Point>
+              <av:Point x:Key="ShapeLocation">400,124.5</av:Point>
               <av:Size x:Key="ShapeSize">200,51</av:Size>
-              <av:PointCollection x:Key="ConnectorLocation">520,375.5 520,484.5</av:PointCollection>
+              <av:PointCollection x:Key="ConnectorLocation">500,175.5 500,205.5 520,205.5 520,238.5</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
           <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Lectura del Archivo Procesado" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="system\main.xaml">
             <ui:InvokeWorkflowFile.Arguments>
-              <InArgument x:TypeArguments="x:String" x:Key="in_file_name">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="final_file_name" />
-              </InArgument>
-              <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_dataTable">
-                <mva:VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="datosProcesados" />
-              </OutArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_file_name">[final_file_name]</InArgument>
+              <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_dataTable">[datosProcesados]</OutArgument>
             </ui:InvokeWorkflowFile.Arguments>
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -130,16 +131,14 @@
             <FlowStep x:Name="__ReferenceID0">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                  <av:Point x:Key="ShapeLocation">420,484.5</av:Point>
+                  <av:Point x:Key="ShapeLocation">420,238.5</av:Point>
                   <av:Size x:Key="ShapeSize">200,123</av:Size>
-                  <av:PointCollection x:Key="ConnectorLocation">420,546 390,546 390,510 260,510</av:PointCollection>
+                  <av:PointCollection x:Key="ConnectorLocation">520,361.5 520,394.5</av:PointCollection>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Conectamos a db y obtenemos la conexion como una variable &#xD;&#xA;" DisplayName="Conectamos a db" sap:VirtualizedContainerService.HintSize="200,123" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="system\connect_db.xaml">
+              <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Conectamos a db y obtenemos la conexion como una variable &#xA;" DisplayName="Conectamos a db" sap:VirtualizedContainerService.HintSize="200,123" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="system\connect_db.xaml">
                 <ui:InvokeWorkflowFile.Arguments>
-                  <OutArgument x:TypeArguments="ui:DatabaseConnection" x:Key="out_connection_db">
-                    <mva:VisualBasicReference x:TypeArguments="ui:DatabaseConnection" ExpressionText="connection_db" />
-                  </OutArgument>
+                  <OutArgument x:TypeArguments="ui:DatabaseConnection" x:Key="out_connection_db">[connection_db]</OutArgument>
                 </ui:InvokeWorkflowFile.Arguments>
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -152,7 +151,7 @@
                 <FlowStep x:Name="__ReferenceID3">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                      <av:Point x:Key="ShapeLocation">60,484.5</av:Point>
+                      <av:Point x:Key="ShapeLocation">420,394.5</av:Point>
                       <av:Size x:Key="ShapeSize">200,51</av:Size>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
@@ -163,6 +162,9 @@
                       </InArgument>
                       <InArgument x:TypeArguments="sd:DataTable" x:Key="in_tableInfo">
                         <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="datosProcesados" />
+                      </InArgument>
+                      <InArgument x:TypeArguments="sd:DataTable" x:Key="in_tarjetasDetalle">
+                        <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="tarjetasDetalles" />
                       </InArgument>
                     </ui:InvokeWorkflowFile.Arguments>
                     <sap:WorkflowViewStateService.ViewState>
@@ -190,12 +192,8 @@
       </sap:WorkflowViewStateService.ViewState>
       <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Se toman los tipos de cambio." DisplayName="Invoke CR_FX workflow" sap:VirtualizedContainerService.HintSize="200,93" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="Procesos\CR_FX.xaml">
         <ui:InvokeWorkflowFile.Arguments>
-          <OutArgument x:TypeArguments="x:String" x:Key="out_compra">
-            <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="compra" />
-          </OutArgument>
-          <OutArgument x:TypeArguments="x:String" x:Key="out_venta">
-            <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="venta" />
-          </OutArgument>
+          <OutArgument x:TypeArguments="x:String" x:Key="out_compra">[compra]</OutArgument>
+          <OutArgument x:TypeArguments="x:String" x:Key="out_venta">[venta]</OutArgument>
         </ui:InvokeWorkflowFile.Arguments>
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
